--- a/UNEDUCADED/mainwindow.ui
+++ b/UNEDUCADED/mainwindow.ui
@@ -20,7 +20,7 @@
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <widget class="QListWidget" name="objectListWidget">
+   <widget class="QTreeWidget" name="objectTreeWidget">
     <property name="geometry">
      <rect>
       <x>3</x>
@@ -41,6 +41,11 @@
       <height>970</height>
      </size>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
@@ -56,9 +61,16 @@
       <height>10</height>
      </size>
     </property>
-    <property name="itemAlignment">
-     <set>Qt::AlignCenter</set>
-    </property>
+    <column>
+     <property name="text">
+      <string>Property</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Value</string>
+     </property>
+    </column>
    </widget>
    <widget class="QTabWidget" name="layerTab">
     <property name="geometry">
@@ -169,6 +181,147 @@
          </item>
         </layout>
        </widget>
+       <widget class="QMdiArea" name="mdiArea_2">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>-140</y>
+          <width>1341</width>
+          <height>891</height>
+         </rect>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <widget class="Dialog" name="subwindow_2">
+         <property name="minimumSize">
+          <size>
+           <width>1325</width>
+           <height>820</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>1325</width>
+           <height>820</height>
+          </size>
+         </property>
+         <property name="windowTitle">
+          <string>Subwindow</string>
+         </property>
+         <widget class="QWidget" name="layoutWidget_2">
+          <property name="geometry">
+           <rect>
+            <x>830</x>
+            <y>858</y>
+            <width>501</width>
+            <height>89</height>
+           </rect>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QTextBrowser" name="textBrowser_3"/>
+           </item>
+           <item>
+            <widget class="QTextBrowser" name="textBrowser_4"/>
+           </item>
+           <item>
+            <widget class="QComboBox" name="comboBox_2">
+             <item>
+              <property name="text">
+               <string>m</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>cm</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </widget>
+       </widget>
+       <widget class="QListWidget" name="itemListWidget_2">
+        <property name="geometry">
+         <rect>
+          <x>1464</x>
+          <y>-161</y>
+          <width>281</width>
+          <height>961</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>15</pointsize>
+         </font>
+        </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
+        <property name="dragEnabled">
+         <bool>true</bool>
+        </property>
+        <property name="dragDropMode">
+         <enum>QAbstractItemView::DragDrop</enum>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>50</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="flow">
+         <enum>QListView::LeftToRight</enum>
+        </property>
+        <property name="spacing">
+         <number>10</number>
+        </property>
+        <property name="viewMode">
+         <enum>QListView::IconMode</enum>
+        </property>
+        <property name="itemAlignment">
+         <set>Qt::AlignJustify</set>
+        </property>
+        <item>
+         <property name="text">
+          <string>bath</string>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>15</pointsize>
+          </font>
+         </property>
+         <property name="textAlignment">
+          <set>AlignCenter</set>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/resources/icons/door.png</normaloff>:/icons/resources/icons/door.png</iconset>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>window</string>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>15</pointsize>
+          </font>
+         </property>
+         <property name="textAlignment">
+          <set>AlignCenter</set>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>resources/icons/window.png</normaloff>resources/icons/window.png</iconset>
+         </property>
+        </item>
+       </widget>
       </widget>
      </widget>
     </widget>
@@ -218,6 +371,11 @@
        <height>961</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="editTriggers">
       <set>QAbstractItemView::NoEditTriggers</set>
      </property>
@@ -225,14 +383,73 @@
       <bool>true</bool>
      </property>
      <property name="dragDropMode">
-      <enum>QAbstractItemView::DragOnly</enum>
+      <enum>QAbstractItemView::DragDrop</enum>
      </property>
-     <property name="flow">
-      <enum>QListView::LeftToRight</enum>
+     <property name="iconSize">
+      <size>
+       <width>50</width>
+       <height>50</height>
+      </size>
+     <property name="spacing">
+      <number>15</number>
+     </property>
+     <property name="viewMode">
+      <enum>QListView::IconMode</enum>
      </property>
      <property name="itemAlignment">
-      <set>Qt::AlignJustify</set>
+      <set>Qt::AlignHCenter</set>
      </property>
+     <item>
+      <property name="text">
+       <string>wall</string>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>15</pointsize>
+       </font>
+      </property>
+      <property name="textAlignment">
+       <set>AlignCenter</set>
+      </property>
+      <property name="icon">
+       <iconset resource="resources.qrc">
+        <normaloff>:/icons/resources/icons/wall.png</normaloff>:/icons/resources/icons/wall.png</iconset>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>window</string>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>15</pointsize>
+       </font>
+      </property>
+      <property name="textAlignment">
+       <set>AlignCenter</set>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>resources/icons/window.png</normaloff>resources/icons/window.png</iconset>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>door</string>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>15</pointsize>
+       </font>
+      </property>
+      <property name="textAlignment">
+       <set>AlignCenter</set>
+      </property>
+      <property name="icon">
+       <iconset resource="resources.qrc">
+        <normaloff>:/icons/resources/icons/door.png</normaloff>:/icons/resources/icons/door.png</iconset>
+      </property>
+     </item>
     </widget>
    </widget>
    <widget class="QWidget" name="layoutWidget">
@@ -494,7 +711,7 @@
      <x>0</x>
      <y>0</y>
      <width>1920</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -660,6 +877,8 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
